--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <link type=text/css rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
     <link type=text/css rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap-theme.min.css') }}">
     <script type=text/javascript src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
-    <script type=text/javascript src="{{ url_for('static', filename='js/bootstrap.min.js) }}"></script>
+    <script type=text/javascript src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     <!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css"> -->
     <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
