--- a/templates/index.html
+++ b/templates/index.html
@@ -61,35 +61,35 @@
     </tr>
   </thead>
   <tbody>
-    <tr id="row1" class="success">
+    <tr id="row0" class="success">
       <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
+      <td></td>
+      <td></td>
+      <td></td>
     </tr>
-    <tr id="row2" class="info">
+    <tr id="row1" class="info">
       <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr id="row2" class="warning">
+      <th scope="row">3</th>
+      <td></td>
+      <td></td>
+      <td></td>
     </tr>
     <tr id="row3" class="warning">
-      <th scope="row">3</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-    <tr id="row4" class="warning">
       <th scope="row">4</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
+      <td></td>
+      <td></td>
+      <td></td>
     </tr>
-    <tr id="row5" class="danger">
+    <tr id="row4" class="danger">
       <th scope="row">5</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
+      <td></td>
+      <td></td>
+      <td></td>
     </tr>
   </tbody>
 </table>
@@ -133,11 +133,11 @@
     $('#progressBar').hide();
     $('#output').html("");
     for (var i=0; i <= res.results.length; i++) {
-      $('#row'+i).find('td').eq($('#picture').index())
+      $('#row'+i).find('td').eq($('#picture').index()-1)
         .append("  ");
-      $('#row'+i).find('td').eq($('#breed').index())
+      $('#row'+i).find('td').eq($('#breed').index()-1)
         .append(res.results[i].name + "  ");
-      $('#row'+i).find('td').eq($('#probability').index())
+      $('#row'+i).find('td').eq($('#probability').index()-1)
         .append(res.results[i].score + "  ");
     }
   }
