--- a/templates/index.html
+++ b/templates/index.html
@@ -153,24 +153,27 @@
   function populate(res) {
     $('#progressBar').hide();
     $('#output').html("");
-    var pictures = [];
-    for (var j=0; j<= res.results.length; j++) {
-      $.ajax({
-          url: '/get_image',
-          data: {file : res.results[j].name},
-          type: 'GET',
-          success: function(res) {
-            pictures.push(res);
-          },
-          error: function(error) {
-            alert('could not find image');
-          }
-      });
-    }
+    //var pictures = [];
+    // for (var j=0; j<= res.results.length; j++) {
+    //   $.ajax({
+    //       url: '/get_image',
+    //       data: {file : res.results[j].name},
+    //       type: 'GET',
+    //       success: function(res) {
+    //         $('#row'+i).find('td').eq($('#picture').index()-1)
+    //           .append(pictures[i]);
+    //       },
+    //       error: function(error) {
+    //         alert('could not find image');
+    //       }
+    //   });
+    // }
 
     for (var i=0; i <= res.results.length; i++) {
       $('#row'+i).find('td').eq($('#picture').index()-1)
-        .append(pictures[i]);
+        .html('<img src="https://classify-doggo.herokuapp.com/get_image?file="' + res.results[i].name + ' />')
+      // $('#row'+i).find('td').eq($('#picture').index()-1)
+      //   .append(pictures[i]);
       $('#row'+i).find('td').eq($('#breed').index()-1)
         .append(res.results[i].name + "  ");
       $('#row'+i).find('td').eq($('#probability').index()-1)
